--- a/site.css
+++ b/site.css
@@ -4,6 +4,11 @@
     height: 200px;
     padding: 0px;
   }
+.grid1{
+    display: grid;
+    grid-template-columns: 500px auto;
+    grid-template-rows: auto;
+}
 .nav-item{
     font-family: 'Shadows Into Light', cursive;
     font-size: 18px;
@@ -12,18 +17,26 @@
     padding-top: 150px;
 }
 .slideshow {
-    padding-left: 40px;
-    padding-top: 40px;
+    grid-column-start: 0;
+    grid-column-end: 1;
+    padding-top: 20px;
+    padding-left: 20px;
     width: 400px;
     height: 400px;
+
 
 }
 .carousel-inner{
     border-radius: 25px;
     border: 4px solid #648880;
 }
+.cardcontainer{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    padding-top: 20px;
+    padding-right: 20px;
+}
 .card{
-    float: right;
-    padding-right: 50px;
-    width: 500px;
+    width: auto;
+    height: 500px;
 }
