--- a/site.css
+++ b/site.css
@@ -6,7 +6,7 @@
   }
 .grid1{
     display: grid;
-    grid-template-columns: 500px auto;
+    grid-template-columns: 600px auto;
     grid-template-rows: auto;
 }
 .nav-item{
@@ -20,7 +20,7 @@
     grid-column-start: 0;
     grid-column-end: 1;
     padding-top: 20px;
-    padding-left: 20px;
+    padding-left: 60px;
     width: 400px;
     height: 400px;
 
@@ -37,6 +37,26 @@
     padding-right: 20px;
 }
 .card{
-    width: auto;
-    height: 500px;
+    width: 600px;
+    height: 450px;
+}
+
+.languages-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.languages {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.code-icon {
+    display: flex;
+    flex-direction: column;
+    width: 100px;
+    height: 100px;
 }
