--- a/site.css
+++ b/site.css
@@ -48,6 +48,17 @@
     margin-top: 40px;
 }
 
+.form-container{
+    display: grid;
+    margin: 0 auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    width: 600px;
+    height: 400px;
+    border-radius: 25px;
+    border: 4px solid #648880;
+}
+
 #code-icon-java {
     width: 300px;
     height: 300px;
