--- a/site.css
+++ b/site.css
@@ -45,49 +45,176 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    margin-top: 40px;
+    width: 580px;
+    height: 425px;
 }
+
 
 .form-container{
     display: grid;
+    justify-content: center;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     margin: 0 auto;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    width: 600px;
-    height: 400px;
-    border-radius: 25px;
+    margin-top: 20px;
+    width: 400px;
+    height: 350px;
+    margin-bottom: 10px;
+}
+
+.social-icons{
+    margin-top: 15px;
+    margin-right: 25px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .social-icons li{
+    position: relative;
+    display: block;
+    color: #666;
+    text-align: center;
+    font-size: 30px;
+    height: 60px;
+    width: 60px;
+    background: #f3f3f3;
+    line-height: 60px;
+    border-radius: 50%;
+    margin: 0 15px;
+    cursor: pointer;
+    transition: .5s;
+  }
+  .social-icons li:before{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    height: inherit;
+    width: inherit;
+    /* background: #d35400; */
+    border-radius: 50%;
+    transform: scale(.9);
+    z-index: -1;
+    transition: .5s;
+  }
+
+
+  #fb-icon:before{
+    background: #4267B2;
+  }
+
+  #twitter-icon:before{
+    background: #1DA1F2;
+  }
+
+  #instagram-icon:before{
+    background: #E1306C;
+  }
+
+  #linkedin-icon:before{
+    background: #2867B2;
+  }
+
+  .social-icons li:hover:before{
+    filter: blur(3px);
+    transform: scale(1.2);
+    /* box-shadow: 0 0 15px #d35400; */
+  }
+
+  #fb-icon:hover:before{
+    box-shadow: 0 0 15px #4267B2;
+  }
+
+  #twitter-icon:hover:before{
+    box-shadow: 0 0 15px #1DA1F2;
+  }
+
+  #instagram-icon:hover:before{
+    box-shadow: 0 0 15px #E1306C;
+  }
+
+  #linkedin-icon:hover:before{
+    box-shadow: 0 0 15px #2867B2;
+  }
+
+  #fb-icon:hover{
+    color: #456cba;
+    box-shadow: 0 0 15px #4267B2;
+    text-shadow: 0 0 15px #4267B2;
+  }
+
+  #twitter-icon:hover{
+    color: #26a4f2;
+    box-shadow: 0 0 15px #1DA1F2;
+    text-shadow: 0 0 15px #1DA1F2;
+  }
+
+  #instagram-icon:hover{
+    color: #e23670;
+    box-shadow: 0 0 15px #E1306C;
+    text-shadow: 0 0 15px #E1306C;
+  }
+
+  #linkedin-icon:hover{
+    color: #2a6cbb;
+    box-shadow: 0 0 15px #2867B2;
+    text-shadow: 0 0 15px #2867B2;
+  }
+
+  /* ul li:hover{
+    color: #ffa502;
+    box-shadow: 0 0 15px #d35400;
+    text-shadow: 0 0 15px #d35400;
+  } */
+
+#floatingInput {
+    width: 400px;
+    border-radius: 25px 25px 0 0;
     border: 4px solid #648880;
+    background-color: #f3f3f3;
+}
+
+#floatingEmail {
+    width: 400px;
+    border: 4px solid #648880;
+    background-color: #f3f3f3;
+}
+
+#floatingTextarea {
+    height: 200px;
+    border-radius: 0 0 25px 25px;
+    border: 4px solid #648880;
+    background-color: #f3f3f3;
 }
 
 #code-icon-java {
-    width: 300px;
-    height: 300px;
+    width: 70px;
+    height: 70px;
 }
 
 #code-icon-js{
-    width: 300px;
-    height: 300px;
+    width: 70px;
+    height: 70px;
 }
 
 #code-icon-python{
-    width: 300px;
-    height: 300px;
+    width: 70px;
+    height: 70px;
 }
 
 #code-icon-html{
-    width: 300px;
-    height: 300px;
-    margin-top: 40px;
+    width: 70px;
+    height: 70px;
+
 }
 
 #code-icon-css{
-    width: 300px;
-    height: 300px;
-    margin-top: 40px;
+    width: 70px;
+    height: 70px;
+
 }
 
 #code-icon-react{
-    width: 300px;
-    height: 300px;
-    margin-top: 40px;
+    width: 70px;
+    height: 70px;
 }
